refactoring kafka configuration