@@ -9,6 +9,10 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
+
+import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -27,18 +31,19 @@ public class SecurityConfig {
     @Bean
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
         JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-        JwtGrantedAuthoritiesConverter converter1 = new JwtGrantedAuthoritiesConverter();
-        converter.setPrincipalClaimName("preferred_username");
+        JwtGrantedAuthoritiesConverter authoritiesConverter = new JwtGrantedAuthoritiesConverter();
+        authoritiesConverter.setAuthorityPrefix("");
 
+        converter.setPrincipalClaimName("preferred_username");
         converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            var authorities = converter1.convert(jwt);
-            var roles = jwt.getClaimAsStringList("spring_sec_roles");
-            return Stream.concat(authorities.stream(),
-                            roles.stream()
-                                    .filter(role -> role.startsWith("ROLE_"))
-                                    .map(SimpleGrantedAuthority::new)
-                                    .map(GrantedAuthority.class::cast))
-                    .toList();
+            Collection<GrantedAuthority> authorities = authoritiesConverter.convert(jwt);
+            List<String> roles = jwt.getClaimAsStringList("spring_sec_roles");
+
+            return Stream.concat(
+                    authorities.stream(),
+                    roles.stream()
+                            .map(role -> new SimpleGrantedAuthority(role))
+            ).collect(Collectors.toList());
         });
 
         return converter;
